/components/footer/footer.component.html.

--- a/001_Practicas/002_PracticaAngularHolaMundo/01-hola-mundo/src/app/app.component.html
+++ b/001_Practicas/002_PracticaAngularHolaMundo/01-hola-mundo/src/app/app.component.html
@@ -1,9 +1,6 @@
 <app-header></app-header>
-<app-body class="testclasecss"></app-body>
-<!--
-<ul>
-    <li>Nombre:{{nombre}}</li>
-    <li>Apellido:{{apellido}}</li>
+<div class="container m-5">
+    <app-body></app-body>
+</div>
 
-</ul>
--->
+<app-footer></app-footer>
