--- a/001_Practicas/002_PracticaAngularHolaMundo/01-hola-mundo/src/app/components/footer/footer.component.html
+++ b/001_Practicas/002_PracticaAngularHolaMundo/01-hola-mundo/src/app/components/footer/footer.component.html
@@ -1,1 +1,8 @@
-<p>footer works!</p>
+<footer class="footer bg-dark text-center">
+    <div class="container">
+        <p>
+
+            Corpory: {{anio}} Nestor Fernando Chocue
+        </p>
+    </div>
+</footer>
