--- a/001_Practicas/002_PracticaAngularHolaMundo/01-hola-mundo/src/app/components/body/body.component.html
+++ b/001_Practicas/002_PracticaAngularHolaMundo/01-hola-mundo/src/app/components/body/body.component.html
@@ -1,1 +1,23 @@
-<h1>Body Component</h1>
+<div class="row">
+    <div class="col">
+        <h1>*ngIF</h1>
+        <div *ngIf="mostrar" class="card text-white bg-primary mb-3" style="max-width: 18rem;">
+            <div class="card-body">
+                <h5 class="card-title">Autor: {{frase.autor}} </h5>
+                <p class="card-text">{{frase.mensaje}}</p>
+            </div>
+        </div>
+
+        <button (click)=" mostrar = !mostrar " class="btn btn-outline-primary">
+            Mostrar/Ocultar
+        </button>
+    </div>
+    <div class="col">
+        <h1>*ngFor</h1>
+        <ul class="list-group">
+            <li *ngFor="let persons of personajes; let i=index" class="list-group-item">
+                {{i+1}} - {{persons}}
+            </li>
+        </ul>
+    </div>
+</div>
