--- a/001_Practicas/003_AppSolaPagina_SPA/spa/src/app/components/shared/navbar/navbar.component.html
+++ b/001_Practicas/003_AppSolaPagina_SPA/spa/src/app/components/shared/navbar/navbar.component.html
@@ -10,13 +10,13 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
+            <li class="nav-item" routerLinkActive="active">
                 <a class="nav-link" [routerLink]="['home']">Home <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" routerLinkActive="active">
                 <a class="nav-link" [routerLink]="['Heroes']">Heroes</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" routerLinkActive="active">
                 <a class="nav-link" [routerLink]="['About']">About</a>
             </li>
             <li class="nav-item dropdown">
@@ -36,7 +36,7 @@
         </ul>
         <form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
         </form>
     </div>
 </nav>
